@@ -33,6 +33,8 @@
 
  Other changes:
 
+   - my_idialog_present(): returns the actually shown instance.
+   - myIDialog::idialog_get_identifier(): defaults to implementation type name.
    - ofa_account_chart_bin_toggle_collapse(): removed unused method.
 
 -----------------------------------------------------------------------
